loopfor.LoopCourse.scala.error
Compilation error:
LoopCourse:4: error: illegal start of simple expression
  for(i <-0 to c-1)){
                   ^