loopfor.LoopCourse.scala.code
var t =10
var c=8
for (i <- 0 to t-1){
  for(i <-0 to c-1)){
    avance();
    if(estFaceMur()){
      gauche();
    }
  }
}
